[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracepulse"
version = "0.1.0"
description = "Execution tracing & performance observability for Python services"
authors = [{ name="Akshay Bajpai" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["loguru"]

[project.urls]
Homepage = "https://github.com/yourusername/tracepulse"
