[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracepulse"
version = "0.2.0"
description = "Production-grade execution tracing and observability for Sync and Async Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
standard = ["loguru"]

[project.urls]
Homepage = "https://github.com/ax5hay/tracepulse"